# rs-rpa

./: Cargo.toml  README.md  rustfmt.toml
src/: cli.rs  element.rs  find.rs  keyboard.rs  lib.rs  main.rs  window.rs
src/utils/: hwnd.rs  mod.rs  result.rs
tests/: element_test.rs  test_utils.rs  window_test.rs
