[package]
name = "rs-rpa"
description = "windows rpa for rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-core = "0.61"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_Controls",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
] }
